// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create group 1`] = `
Object {
  "data": Object {
    "createGroup": Object {
      "group": Object {
        "booking_status": "notBooked",
        "id": "8",
        "max_age": 83,
        "member_max": 3,
        "min_age": 31,
        "name": "Create Group",
        "preferred_rooms": Array [],
      },
    },
  },
}
`;

exports[`Get Groups 1`] = `
Object {
  "data": Object {
    "groups": Array [
      Object {
        "id": "1",
        "name": "Flaming Giraffes",
      },
      Object {
        "id": "2",
        "name": "Rabid Raccoons",
      },
      Object {
        "id": "3",
        "name": "Diabetic Dingos",
      },
      Object {
        "id": "4",
        "name": "Bad Wombats",
      },
      Object {
        "id": "5",
        "name": "Misunderstood Mice",
      },
      Object {
        "id": "6",
        "name": "Argile Sweaters",
      },
      Object {
        "id": "7",
        "name": "Agitated Ardvarks",
      },
    ],
  },
}
`;

exports[`Update group description 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "updated description",
        "id": "9",
        "max_age": 83,
        "member_max": 3,
        "min_age": 31,
        "name": "Update group description",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [],
        "status": "open",
      },
    },
  },
}
`;

exports[`Update group max age 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "Excepteur anim eiusmod ipsum ea enim.",
        "id": "17",
        "max_age": 99,
        "member_max": 3,
        "min_age": 31,
        "name": "Update group max age",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [],
        "status": "open",
      },
    },
  },
}
`;

exports[`Update group member max 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "Excepteur anim eiusmod ipsum ea enim.",
        "id": "13",
        "max_age": 83,
        "member_max": 8,
        "min_age": 31,
        "name": "Update group member max",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [],
        "status": "open",
      },
    },
  },
}
`;

exports[`Update group member max, error invalid member max - max 1`] = `
Object {
  "data": Object {
    "updateGroup": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "data": Object {
            "errors": Object {
              "member_max": Array [
                "member_max must be less than or equal to 30",
              ],
            },
          },
          "isBoom": true,
          "isServer": false,
          "output": Object {
            "headers": Object {},
            "payload": Object {
              "error": "Bad Request",
              "message": "ValidationError",
              "statusCode": 400,
            },
            "statusCode": 400,
          },
        },
      },
      "locations": Array [
        Object {
          "column": 5,
          "line": 13,
        },
      ],
      "message": "ValidationError",
      "path": Array [
        "updateGroup",
      ],
    },
  ],
}
`;

exports[`Update group member max, error invalid member max 1`] = `
Object {
  "data": Object {
    "updateGroup": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "data": Object {
            "errors": Object {
              "member_max": Array [
                "member_max must be greater than or equal to 2",
              ],
            },
          },
          "isBoom": true,
          "isServer": false,
          "output": Object {
            "headers": Object {},
            "payload": Object {
              "error": "Bad Request",
              "message": "ValidationError",
              "statusCode": 400,
            },
            "statusCode": 400,
          },
        },
      },
      "locations": Array [
        Object {
          "column": 5,
          "line": 13,
        },
      ],
      "message": "ValidationError",
      "path": Array [
        "updateGroup",
      ],
    },
  ],
}
`;

exports[`Update group min age 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "Excepteur anim eiusmod ipsum ea enim.",
        "id": "16",
        "max_age": 83,
        "member_max": 3,
        "min_age": 1,
        "name": "Update group min age",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [],
        "status": "open",
      },
    },
  },
}
`;

exports[`Update group name 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "Excepteur anim eiusmod ipsum ea enim.",
        "id": "10",
        "max_age": 83,
        "member_max": 3,
        "min_age": 31,
        "name": "This is my updated group name",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [],
        "status": "open",
      },
    },
  },
}
`;

exports[`Update group name, error empty name 1`] = `
Object {
  "data": Object {
    "updateGroup": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "data": Object {
            "errors": Object {
              "name": Array [
                "name must be at least 3 characters",
              ],
            },
          },
          "isBoom": true,
          "isServer": false,
          "output": Object {
            "headers": Object {},
            "payload": Object {
              "error": "Bad Request",
              "message": "ValidationError",
              "statusCode": 400,
            },
            "statusCode": 400,
          },
        },
      },
      "locations": Array [
        Object {
          "column": 5,
          "line": 13,
        },
      ],
      "message": "ValidationError",
      "path": Array [
        "updateGroup",
      ],
    },
  ],
}
`;

exports[`Update group name, error one space name 1`] = `
Object {
  "data": Object {
    "updateGroup": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "data": Object {
            "errors": Object {
              "name": Array [
                "name must be at least 3 characters",
              ],
            },
          },
          "isBoom": true,
          "isServer": false,
          "output": Object {
            "headers": Object {},
            "payload": Object {
              "error": "Bad Request",
              "message": "ValidationError",
              "statusCode": 400,
            },
            "statusCode": 400,
          },
        },
      },
      "locations": Array [
        Object {
          "column": 5,
          "line": 13,
        },
      ],
      "message": "ValidationError",
      "path": Array [
        "updateGroup",
      ],
    },
  ],
}
`;

exports[`Update group room preference 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "Excepteur anim eiusmod ipsum ea enim.",
        "id": "18",
        "max_age": 83,
        "member_max": 3,
        "min_age": 31,
        "name": "Update group room preference",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [
          Object {
            "id": "1",
            "name": "Magic Shop",
          },
          Object {
            "id": "2",
            "name": "The Egyptians",
          },
        ],
        "status": "open",
      },
    },
  },
}
`;

exports[`Update group room preference, empty 1`] = `
Object {
  "data": Object {
    "updateGroup": Object {
      "group": Object {
        "description": "Excepteur anim eiusmod ipsum ea enim.",
        "id": "19",
        "max_age": 83,
        "member_max": 3,
        "min_age": 31,
        "name": "Update room preference empty",
        "preferred_date_times": Array [],
        "preferred_rooms": Array [],
        "status": "open",
      },
    },
  },
}
`;
